# api/models/export.go
@@ -6,11 +6,12 @@ import (
 )
 
 type Export struct {
-	Id         string   `bson:"_id" json:"id,omitempty"`
-	Type       string   `bson:"Type" binding:"required" json:"type,omitempty"`
-	Address    string   `bson:"Address" binding:"required" json:"address,omitempty"`
-	CreateTime int64    `bson:"CreateTime" json:"createTime,omitempty"`
-	Targets    []string `orm:"-" bson:"-" json:"targets,omitempty"`
+	*PageQuery `orm:"-" json:"-" bson:"-"`
+	Id         string   `bson:"_id" json:"id,omitempty"`                             // Id
+	Type       string   `bson:"Type" binding:"required" json:"type,omitempty"`       // 节点类型
+	Address    string   `bson:"Address" binding:"required" json:"address,omitempty"` // 节点地址
+	CreateTime int64    `bson:"CreateTime" json:"createTime,omitempty"`              // 创建时间
+	Targets    []string `orm:"-" bson:"-" json:"targets,omitempty"`                  // 节点地址列表
 }
 
 func (m *Export) Add() (errC *resp.Response, err error) {
@@ -22,11 +23,39 @@ func (m *Export) Add() (errC *resp.Response, err error) {
 	return
 }
 
-func (m *Export) Node() (exs []*Export, errC *resp.Response, err error) {
+func (m *Export) All() (exs []*Export, errC *resp.Response, err error) {
 	exs = make([]*Export, 0)
-	ex := &Export{
-		Targets: []string{"192.168.0.252:8080"},
+	qs := o.QueryTable(&Export{})
+	if m.Type != "" {
+		qs = qs.Filter("Type", m.Type)
 	}
-	exs = append(exs, ex)
+	if m.Address != "" {
+		qs = qs.Filter("Address__regex", m.Address)
+	}
+
+	err = qs.Limit(m.PageSize, (m.Page-1)*m.PageSize).OrderBy("-CreateTime").All(&exs)
+	if err != nil {
+		errC = resp.ErrDbRead
+		errC.MoreInfo = err.Error()
+		return
+	}
+	return
+}
+
+func (m *Export) Node() (ex *Export, errC *resp.Response, err error) {
+	exs := make([]*Export, 0)
+	err = o.QueryTable("Export").Filter("Type", m.Type).All(&exs)
+	if err != nil {
+		errC = resp.ErrDbRead
+		errC.MoreInfo = err.Error()
+		return
+	}
+	targets := make([]string, 0)
+	for _, v := range exs {
+		targets = append(targets, v.Address)
+	}
+	ex = &Export{
+		Targets: targets,
+	}
 	return
 }
